# multimodal-playground

./: .gitignore  README.md
gravitino-daft/: .env.example  EVALUATION.md  README.md  docker-compose.yml  pyproject.toml
gravitino-daft/gravitino_daft/: __init__.py  config.py
gravitino-daft/notebooks/: gravitino_daft_explore.ipynb  gravitino_daft_s3.ipynb
gravitino-daft/scripts/: bootstrap_gravitino.py  bootstrap_s3.py  direct_s3_with_daft.py  mock_gravitino_server.py  read_gvfs.py  read_s3_fileset.py  s3_metadata.py  upload_s3_fileset.py  upload_sample_data.py  write_gvfs.py  write_s3_fileset.py
multimodal-poc/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
multimodal-poc/.devcontainer/: devcontainer.json
multimodal-poc/.github/workflows/: test.yml
multimodal-poc/multimodal_x/: __init__.py  config.py
multimodal-poc/multimodal_x/audio/: __init__.py  asr.py  config.py  embedding.py  prompt.py  schema.py  udfs.py
multimodal-poc/multimodal_x/image/: __init__.py  config.py  detector.py  embedding.py  quality.py  rules.py  schema.py  udfs.py
multimodal-poc/multimodal_x/storage/: __init__.py  blob.py  io.py
multimodal-poc/multimodal_x/workflow/: index.py  manage.py
multimodal-poc/scripts/: init_s3.py
multimodal-poc/tests/: conftest.py
multimodal-poc/tests/audio/: test_prompt.py  test_query.py
multimodal-poc/tests/image/: conftest.py  test_desc_join.py  test_detector.py  test_embedding_pipeline.py  test_ingest.py  test_pipeline_e2e.py  test_quality.py  test_query.py  test_rules.py
(+12 files in other folders)
