[project]
name = "gravitino-daft"
version = "0.1.0"
description = "Gravitino + Daft 学习与验证沙盒"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "apache-gravitino>=0.9.0",
  "daft[gravitino]>=0.7.2",
  "pandas>=2.0.0",
  "pyarrow>=15.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
notebook = [
  "jupyterlab",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gravitino_daft"]
