[project]
name = "multimodal-playground"
version = "0.1.0"
description = "多模态分析 POC：S3 录音 → Lance blob v2 → 转写/分析 → 声学嵌入 → 查询；同时支持图像质量与人脸检测流程"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "daft-lance>=0.4.0",
  "funasr",
  "getdaft",
  "insightface",
  "lance-ray",
  "modelscope",
  "numpy",
  "onnxruntime",
  "opencv-python-headless",
  "openai",
  "pillow",
  "pyarrow",
  "pylance<8.0.0",
  "python-dotenv",
  "ray",
  "soundfile",
  "torch",
  "torchaudio",
  "transformers",
]

[tool.pytest.ini_options]
markers = [
  "ray: hard dependency on a local Ray cluster; excluded by default, run with `pytest -m ray`",
]
addopts = "-m 'not ray'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multimodal_x"]
